# hyperfuzz

./: .gitignore  Cargo.toml  README.md  comprehensive_test.py  pyproject.toml
python/hyperfuzz/: __init__.py
src/: alignment.rs  lcs_core.rs  lib.rs  set_based.rs  vector.rs
src/distance/: damerau_levenshtein.rs  hamming.rs  indel.rs  jaro.rs  jaro_winkler.rs  lcs_seq.rs  lcs_str.rs  levenshtein.rs  mod.rs  osa.rs  postfix.rs  prefix.rs
src/fuzz/: mod.rs  partial_ratio.rs  partial_token_ratio.rs  ratio.rs  token_ratio.rs  wratio.rs
tests/: test_algorithm_comparison.py  test_hyperfuzz.py  test_vs_textdistance.py
