[package]
name = "hyperfuzz"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "High-performance string similarity algorithms"

[lib]
name = "_hyperfuzz"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
ahash = "0.8"
smallvec = "1.13"
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
